--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./server/server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./server/server.js",
+    "start:dev": "nodemon ./server/server.js",
+    "start:prod": "SET NODE_ENV=production && nodemon ./server/server.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
